--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>      
     </nav>
   <div class="about">
-    <section>
+    <section class="aboutme">
       <div class="row">
       <div class="col-md-12">
         <h1>Qui suis-je?</h1>
