--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       </div>
       <div id="menu">
         <a href="">Qui suis-je ?</a> |
-        <a href="views/blog.html"> Blog </a>
+        <a href="views/blog.html"> Blog </a> |
+        <a href="views/form.html"> Contactez-moi</a>
       </div>
     </div>      
     </nav>
@@ -122,7 +123,7 @@
         </div>
       </div>
   </section>
-  <section >
+  <section class="formation">
     <div class="row">
       <div class="col-md-12">
               <h1>Formation et Diplome</h1>
