--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </ul>
       </div>
   </section>
-  <section>
+  <section id="Competences">
     <div class="row">
       <div class="col-md-12">
               <h1>Competences</h1>
@@ -169,18 +169,18 @@
           </div>
         </div>
             <div class="panel-body" style="">
-                <p class="" style="">Python   &#x2605;  &#x2605;  &#x2605;  &#x2605;  &#x2606;</p>
-                <p class="" style="">Powershell   &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
-                <p class="" style="">C# &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
-                <p class="" style="">Html &#x2605;  &#x2605;  &#x2605;  &#x2605;  &#x2606;</p>
-                <p class="" style="">JavaScript   &#x2605;  &#x2605;  &#x2605;  &#x2605;  &#x2606;</p>
-                <p class="" style="">CSS  &#x2605;  &#x2605;  &#x2605; &#x2605;   &#x2606;</p>
-                <p class="" style="">Java &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
-                <p class="" style="">Php  &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
-                <p class="" style="">Boostrapp  &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
-                <p class="" style="">SalesForce &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
-                <p class="" style="">Laravel  &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
-                <p class="" style="">PLSQL  &#x2605;  &#x2605;  &#x2606;  &#x2606;  &#x2606;</p>                                  
+                <p  id="langue" class="" style="">Python   &#x2605;  &#x2605;  &#x2605;  &#x2605;  &#x2606;</p>
+                <p  id="langue" class="" style="">Powershell   &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
+                <p id="langue" class="" style="">C# &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
+                <p id="langue" class="" style="">Html &#x2605;  &#x2605;  &#x2605;  &#x2605;  &#x2606;</p>
+                <p id="langue" class="" style="">JavaScript   &#x2605;  &#x2605;  &#x2605;  &#x2605;  &#x2606;</p>
+                <p id="langue" class="" style="">CSS  &#x2605;  &#x2605;  &#x2605; &#x2605;   &#x2606;</p>
+                <p id="langue" class="" style="">Java &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
+                <p id="langue" class="" style="">Php  &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
+                <p id="langue" class="" style="">Boostrapp  &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
+                <p id="langue" class="" style="">SalesForce &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
+                <p id="langue" class="" style="">Laravel  &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
+                <p id="langue" class="" style="">PLSQL  &#x2605;  &#x2605;  &#x2606;  &#x2606;  &#x2606;</p>                                  
             </div>
       </div>
       <div class="col-md-1">
@@ -193,9 +193,9 @@
           </div>
         </div>
           <div class="panel-body" style="">
-              <p class="" style="">Window &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
-              <p class="" style="">Linux  &#x2605;  &#x2605;  &#x2606;  &#x2606;  &#x2606;</p>
-              <p class="" style="">CCNA &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
+              <p id="langue" class="" style="">Window &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
+              <p id="langue" class="" style="">Linux  &#x2605;  &#x2605;  &#x2606;  &#x2606;  &#x2606;</p>
+              <p id="langue" class="" style="">CCNA &#x2605;  &#x2605;  &#x2605;  &#x2606;  &#x2606;</p>
           </div>
 
       </div>
@@ -218,8 +218,8 @@
             <h3>Sport</h3>
           </div>
         </div>
-          <div class="panel-body" style="">
-              <p>Pratique le football depuis l'âge de six ans, actuellement catégorie U19</p><p>Pratique du Tennis pendant deux ans </p>
+          <div id="langue" class="panel-body" style="">
+              <p id="langue">Pratique le football depuis l'âge de six ans, actuellement catégorie U19</p><p id="langue">Pratique du Tennis pendant deux ans </p>
           </div>
 
       </div>              
