--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div vlass="col-md-12">
     <p>
     Bonjour je m'appelle Adrien LEIB, j'ai 19 ans. En admiration sur le monde informatique depuis toujours,  je me suis logiquement orienté vers un cursus informatique d'une durée de 5 ans à l'école Ingesup du campus d'Ynov Paris. 
-    J'aime passer mon temps libre à suivre les actualités sportives, lire des mangas ou encore jouer aux jeux vidéos. Cela justifie aussi la raison pour laquelle j'ai souhaité passer mon stage au sein d'une association esport.</p>
+    J'aime passer mon temps libre à suivre les actualités sportives, lire des mangas ou encore jouer aux jeux vidéos. Cela justifie aussi la raison pour laquelle j'ai souhaité passer mon stage au sein d'une association esport.</p> Vous pouvez consulter mon cv : <a href="cv/CV.pdf"> ici </a>
     </div>
     </div>
     </div>
