--- a/index.html
+++ b/index.html
@@ -137,36 +137,35 @@
     </div>
     </section>
     <section class="formation">
-    <div class="row">
-    <div class="col-md-1  "> 
-    </div>
-    <div class="col-md-11">
-    <h3><li> Formation et Diplôme </li> </h3>
-    </div>
-    </div>
-    <div class="row" id="left_p">
-    <div class="col-md-1"></div>
-    <ul>
-    <div style="">
-    <li>BACHELOR INFORMATIQUE</li>
-    <p>Spécialité Développement - 2017/2020.
-    <br>Paris Ynov Campus</p>
-    </div>
+      <div class="row">
+        <div class="col-md-1  "> 
+        </div>
+        <div class="col-md-11">
+        <h3><li> Formation et Diplôme </li> </h3>
+        </div>
+      </div>
+      <div class="row" id="left_p">
+      <div class="col-md-1"></div>
+      <div style="" class="col-md-10">
+      <ul>
+      <li>BACHELOR INFORMATIQUE</li>
+      <p>Spécialité Développement - 2017/2020.
+      <br>Paris Ynov Campus</p>
+ 
+      <li>BACCALAURÉAT SCIENTIFIQUE</li>
+      <p class="text-left">Obtention du baccalauréat générale Scientifique Option Informatique et Science Numérique.option Informatique et Science Numérique - 2016/2017
+        Lycée Gorges Braque - Argenteuil</p>
 
-    <div>
-    <li>BACCALAURÉAT SCIENTIFIQUE</li>
-    <p class="text-left">Obtention du baccalauréat générale Scientifique Option Informatique et Science Numérique.option Informatique et Science Numérique - 2016/2017
-      Lycée Gorges Braque - Argenteuil</p>
-    </div>
-    <div>
-    <li>UNE GRANDE ECOLE : POURQUOI PAS MOI?</li>
-    <p class="">Sélectionné pour le programme ESSEC :
-    <br>
-    Cours de mathématiques, politique, économie et anglais tous les mercredis</p>
-    </div>
-    </ul>
-    </div>
+      <li>UNE GRANDE ECOLE : POURQUOI PAS MOI?</li>
+      <p class="">Sélectionné pour le programme ESSEC :
+      <br>
+      Cours de mathématiques, politique, économie et anglais tous les mercredis</p>
+      </ul>
+      </div>
+      </div>
     </section>
+
+
     <section id="Competences">
     <div class="row">
     <div class="col-md-1  "> 
