--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <title>About</title>
   </head>
   <body>
+    
     <nav>
     <div id="nav">
       <div id="name">
@@ -24,13 +25,13 @@
       </div>      
     </nav>
     <div class="about">
+      <ol type="I" class="index_ol">
     <section class="aboutme">
     <div class="row">
     <div class="col-md-12">
     <h1>Qui suis-je?</h1>
     </div>
     </div>
-    <ol type="I">
     <div class="row"> 
     <div class="col-md-1  "> 
     </div>
@@ -142,6 +143,7 @@
         </div>
         <div class="col-md-11">
         <h3><li> Formation et Diplôme </li> </h3>
+      
         </div>
       </div>
       <div class="row" id="left_p">
@@ -172,7 +174,6 @@
     </div>
     <div class="col-md-11">
     <h3><li> Competences </li> </h3>
-    </ol>
     </div>
     </div>
     <div class="row">
@@ -242,6 +243,7 @@
     </div>              
     </div>
     </section>
+    </ol>
     </div>
     <footer>
     <div id="footer">
